--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>z
+                    </div>
                 </div>
             </div>
             <div class="d-flex justify-content-between mt-3">
