--- a/AboutUs.html
+++ b/AboutUs.html
@@ -54,27 +54,26 @@
             </div>
         </div>
     </nav>
-    <nav class="navbar navbar1 navbar-expand-lg ">
+    <nav class="navbar navbar1 navbar2 navbar-expand-lg ">
         <div class="container-fluid d-flex flex-row-reverse">
 
             <div class="d-lg-none">
-                <i class='far fa-user-circle fs-2 text-light'></i>
+                <i class='far fa-user-circle fs-2 text-dark'></i>
             </div>
             <div class="col-lg-4 d-none d-lg-flex justify-content-center ">
                 <div class="d-flex justify-content-evenly gap-5 gap-lg-4">
-                    <!-- Button trigger modal -->
-                    <button class="navbtn2 bg-transparent mx-auto my-auto font border border-0" data-bs-toggle="modal"
-                        data-bs-target="#staticBackdrop" id="login">
+                    <button class="navbtn2 bg-transparent mx-auto my-auto font border border-0 text-dark"
+                        data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="login">
                         <span><i class='far fa-user-circle'></i></span>
                         Login/Register
                     </button>
-                    <button type="submit " class="btn fourth font mx-auto my-auto fs-6">
+                    <button type="submit " class="btn1 fourth1 font mx-auto my-auto fs-6">
                         Add Property <span class="ps-1 ">&nearr;</span>
                     </button>
                 </div>
             </div>
             <div class="col-6 col-lg-4 d-flex justify-content-center">
-                <a class="navbar-brand" href="#"><img src="./images/illustrations/header-logo1.svg" alt=""
+                <a class="navbar-brand" href="#"><img src="./images/illustrations/header-logo2.svg" alt=""
                         class="navimg "></a>
             </div>
             <div class="d-lg-none">
@@ -83,15 +82,14 @@
                         src="./images/illustrations/hbg.png" alt=""></button>
             </div>
             <div class="col-lg-4  d-lg-inline-flex justify-content-center d-none gap-4 ">
-                <a class="nav-link  font" aria-current="page" href="./index.html">Home</a>
-                <a class="nav-link active1 font" href="#">About Us</a>
-                <a class="nav-link font" href="#">Pricing</a>
-                <a class="nav-link font" href="#">Listing</a>
+                <a class="nav-link1 nav-link  font " aria-current="page" href="./index.html">Home</a>
+                <a class="nav-link1 nav-link active1 font " href="#">About Us</a>
+                <a class="nav-link1 nav-link font " href="#">Pricing</a>
+                <a class="nav-link1 nav-link font " href="#">Listing</a>
                 <section>
 
                 </section>
             </div>
-
         </div>
     </nav>
 
@@ -222,85 +220,33 @@
 
             <div class="abs4line">
                 <div>
-                    <div class="swiper mySwiper3 ">
+                    <div class="swiper mySwiper3 swp3">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide swpslide3">
-                                <div class="cards4sld border p-4 w-25 ">
-                                    <div class="mb-3"><img src="./images/illustrations/5Stars.svg" alt=""></div>
-
-                                    <p class="fs-6 fw-normal">This platform made my home buying experience effortless.
-                                    </p>
-                                    <div class="d-flex justify-content-start gap-2">
-                                        <div><i class="ri-account-circle-fill fs-1"></i></div>
-                                        <div>
-                                            <p class="fs-6 fw-2 mt-2">Emily Johnson <br> <span
-                                                    class="fw-normal">Homeowner,
-                                                    Happy Client</span></p>
-
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="swiper-slide">
+                               1
                             </div>
-                            <div class="swiper-slide swpslide3">
-                                <div class="cards4sld border p-4">
-                                    <div class="w-25 mb-3"><img src="./images/illustrations/5Stars.svg" alt=""></div>
-
-                                    <p class="fs-6 fw-normal">This platform made my home buying experience effortless.
-                                    </p>
-                                    <div class="d-flex justify-content-start gap-2">
-                                        <div><i class="ri-account-circle-fill fs-1"></i></div>
-                                        <div>
-                                            <p class="fs-6 fw-2 mt-2">Emily Johnson <br> <span
-                                                    class="fw-normal">Homeowner,
-                                                    Happy Client</span></p>
-
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="swiper-slide ">
+                              2
                             </div>
-                            <div class="swiper-slide swpslide3">
-                                <div class="cards4sld border p-4">
-                                    <div class="w-25 mb-3"><img src="./images/illustrations/5Stars.svg" alt=""></div>
-
-                                    <p class="fs-6 fw-normal">This platform made my home buying experience effortless.
-                                    </p>
-                                    <div class="d-flex justify-content-start gap-2">
-                                        <div><i class="ri-account-circle-fill fs-1"></i></div>
-                                        <div>
-                                            <p class="fs-6 fw-2 mt-2">Emily Johnson <br> <span
-                                                    class="fw-normal">Homeowner,
-                                                    Happy Client</span></p>
-
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="swiper-slide ">
+                               3
                             </div>
-                            <div class="swiper-slide swpslide3">
-                                <div class="cards4sld border p-4">
-                                    <div class="w-25 mb-3"><img src="./images/illustrations/5Stars.svg" alt=""></div>
-
-                                    <p class="fs-6 fw-normal">This platform made my home buying experience effortless.
-                                    </p>
-                                    <div class="d-flex justify-content-start gap-2">
-                                        <div><i class="ri-account-circle-fill fs-1"></i></div>
-                                        <div>
-                                            <p class="fs-6 fw-2 mt-2">Emily Johnson <br> <span
-                                                    class="fw-normal">Homeowner,
-                                                    Happy Client</span></p>
-
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="swiper-slide ">
+                               4
                             </div>
-                            <!-- <div class="swiper-slide swpslide3">Slide 5</div>
-                          <div class="swiper-slide swpslide3">Slide 6</div>
-                          <div class="swiper-slide swpslide3">Slide 7</div>
-                          <div class="swiper-slide swpslide3">Slide 8</div>
-                          <div class="swiper-slide swpslide3">Slide 9</div> -->
+                            <div class="swiper-slide ">
+                                5
+                             </div>
+                             <div class="swiper-slide ">
+                                6
+                             </div>
+                             <div class="swiper-slide ">
+                                7
+                             </div>
                         </div>
-
+                        <div class="swiper-pagination1"></div>
                     </div>
-                    <div class="swiper-pagination1"></div>
+                   
 
                 </div>
             </div>
@@ -527,6 +473,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
         integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="script.js"></script>
 </body>
 
