--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         </div>
         <div class="swiper mySwiper2 swp2 mt-5">
             <div class="swiper-wrapper ">
-                <div class="swiper-slide swpslide2">
+                <div class="swiper-slide ">
                     <div class="cards4sld border p-4">
                         <div class="w-25 mb-3"><img src="./images/illustrations/5Stars.svg" alt=""></div>
 
