about us complete

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="script.js">
-    <title>Document</title>
+    <title>About Us</title>
 </head>
 
 <body>
@@ -95,7 +95,7 @@
 
     <!-- AboutUs sec1 -->
     <div class="abs1">
-        <div class="abs1con">
+        <div class="abs1con w-50 ">
             <h1 class="font text-dark">About Us</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
@@ -113,31 +113,31 @@
     <!-- Sec2 -->
     <div class="abs2">
         <div class="container">
-            <div class="d-flex justify-content-between gap-5">
-                <div class="col-6">
+            <div class="d-md-flex justify-content-between gap-lg-5 gap-3">
+                <div class="col-12 col-md-6">
                     <div class="mb-5">
                         <p class="font text-dark ">About Us</p>
                         <h1 class="font text-dark">Secure your family's Dream home.</h1>
                         <p class="font text-body-secondary abs2p mt-3">Our founders Dustin Moskovitz and Justin
                             Rosenstein
                             met while leading Engineering .</p>
-                        <button type="submit " class="abs2btn btn fourth font mx-auto my-auto fs-6 mt-3">
+                        <button type="submit " class="abs2btn btn fourth font mx-auto my-auto fs-6 mt-3 ">
                             Contact Us
                         </button>
                     </div>
                     <hr>
-                    <div class="mt-5 abs2no d-flex justify-content-around ">
-                        <div>
-                            <h1 class="font text-dark">1.2%</h1>
-                            <p class="fs-6 fw-normal font text-body-secondary">Low interest rate</p>
+                    <div class="mt-5 abs2no d-flex  gap-4">
+                        <div class="col-5  ">
+                            <h1 class="font text-dark text-center">1.2%</h1>
+                            <p class="fs-6 fw-normal font text-body-secondary text-center">Low interest rate</p>
                         </div>
-                        <div>
-                            <h1 class="font text-dark">$1.3b+</h1>
-                            <p class="fs-6 fw-normal font text-body-secondary">Cumulative trading volume</p>
+                        <div class="col-6">
+                            <h1 class="font text-dark text-center">$1.3b+</h1>
+                            <p class="fs-6 fw-normal font text-body-secondary text-center">Cumulative trading volume</p>
                         </div>
                     </div>
                 </div>
-                <div class="abs2s2 col-6 p-4">
+                <div class="abs2s2 col-12 col-md-6 p-4">
                     <div class="abs2s2con p-4">
                         <div>
                             <h1 class="font text-dark fs-2 fs-md-1 mt-3">Who we are?</h1>
@@ -168,16 +168,16 @@
 
 
     <div class="space p-3"></div>
-    <div class="abs3 ms-2 me-2 mt-5">
+    <div class="abs3 ms-3 me-3 mt-5">
         <div class="section">
-            <div class="header d-flex justify-content-between text-start gap-5 mt-5">
-                <h1 class="font col-6">Easily Purchase, Sell, or Lease Listings. <span>*</span></h1>
-                <p class="font  col-6">Your leading real estate advocate, transforming houses into dreams. Trust us to
+            <div class="header d-md-flex justify-content-between text-start gap-lg-5 mt-5">
+                <h1 class="font col-12 col-md-6">Easily Purchase, Sell, or Lease Listings. <span>*</span></h1>
+                <p class="font  col-12 col-md-6 mt-3 mt-md-0">Your leading real estate advocate, transforming houses into dreams. Trust us to
                     expertly guide you home</p>
             </div>
 
-            <div class="features mt-5 pt-5 mb-4">
-                <div class="feature-item  col-4">
+            <div class="features mt-5 pt-5 mb-4 d-md-flex justify-content-around">
+                <div class="feature-item  col-md-4">
                     <div class="propertyicon"></div>
 
                     <h3 class="mt-3">Property Insurance</h3>
@@ -202,51 +202,74 @@
 
 
     <div class="space p-3"></div>
-    <div class="abs4">
+    <div class="abs4 mb-5">
         <div class="container ">
-            <div class="d-flex justify-content-between">
+            <div class="d-md-flex justify-content-between">
                 <div>
                     <h1 class="font text-dark">Our Agents</h1>
-                    <p class="font text-body-secondary abs2p mt-3 w-75">Our agents are here to help you buy, sell, or
+                    <p class="font text-body-secondary abs2p mt-3 col-md-10">Our agents are here to help you buy, sell, or
                         rent with
                         ease, offering expert guidance and local knowledge every step of the way.</p>
                 </div>
-                <div>
-                    <button type="submit " class="abs2btn btn font mx-auto my-auto fs-6 mt-5">
+                <div class=" col-md-3 ">
+                    <button type="submit " class="abs2btn w-100 abs4btn btn font mx-auto my-auto fs-6 mt-md-5 mt-3">
                         Meet Entire Team
                     </button>
                 </div>
             </div>
 
-            <div class="abs4line">
+            <div class="abs4line p-4 mt-3">
                 <div>
                     <div class="swiper mySwiper3 swp3">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                               1
+                                <div class="agentcard ">
+                                    <div class="agents agent1">
+                                    </div>
+                                    <h4 class="font text-dark fw-6 text-center mt-3">Chris Matial</h4>
+                                    <h5 class="font text-body-tertiary fw-6 text-center mt-2">Retailer</h5>
+                                </div>
                             </div>
                             <div class="swiper-slide ">
-                              2
+                                <div class="agentcard ">
+                                    <div class="agents agent2">
+                                    </div>
+                                    <h4 class="font text-dark fw-6 text-center mt-3">Abodey Swedey</h4>
+                                    <h5 class="font text-body-tertiary fw-6   text-center mt-2">CEO & Founder</h5>
+                                </div>
                             </div>
                             <div class="swiper-slide ">
-                               3
+                                <div class="agentcard ">
+                                    <div class="agents agent3">
+
+                                    </div>
+                                    <h4 class="font text-dark fw-6 text-center mt-3">Arafa El Sherief</h4>
+                                    <h5 class="font text-body-tertiary fw-6   text-center mt-2">Broker</h5>
+                                </div>
                             </div>
                             <div class="swiper-slide ">
-                               4
+                                <div class="agentcard ">
+                                    <div class="agents agent4">
+
+                                    </div>
+                                    <h4 class="font text-dark fw-6 text-center mt-3">Mona Ghaly</h4>
+                                    <h5 class="font text-body-tertiary fw-6   text-center mt-2">Retailer</h5>
+                                </div>
                             </div>
                             <div class="swiper-slide ">
-                                5
-                             </div>
-                             <div class="swiper-slide ">
-                                6
-                             </div>
-                             <div class="swiper-slide ">
-                                7
-                             </div>
+                                <div class="agentcard ">
+                                    <div class="agents agent5">
+
+                                    </div>
+                                    <h4 class="font text-dark fw-6 text-center mt-3">Magdy Aya</h4>
+                                    <h5 class="font text-body-tertiary fw-6   text-center mt-2">Marketing Expert</h5>
+                                </div>
+                            </div>
+
                         </div>
-                        <div class="swiper-pagination1"></div>
+                        <div class="swiper-pagination1 mt-5 d-flex justify-content-center"></div>
                     </div>
-                   
+
 
                 </div>
             </div>
@@ -255,14 +278,15 @@
 
 
 
+    <div class="space p-5"></div>
+    <div class="space p-5"></div>
+    <div class="space p-5"></div>
 
 
 
 
 
-
-
-    <!-- <div class="space p-3"></div>
+    <div class="space p-3"></div>
     <div class="footer pt-5">
         <div class="container d-md-flex justify-content-evenly pb-4">
             <div class="d-lg-flex col-md-7 col-12">
@@ -332,7 +356,7 @@
         <div class="container d-flex justify-content-center pt-3 rights">
             <p class="text-light font text-center">© Homez 2024 Prathamesh Adinawar - All rights reserved.</p>
         </div>
-    </div> -->
+    </div>
 
 
 
